versioned_docs/version-7.0.0/api/flip.mdx
---
title: flip
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes input features and flips all of their coordinates from `[x, y]` to `[y, x]`.

### Parameters

| Name                   | Type                                                         | Description                                                                                     |
| ---------------------- | ------------------------------------------------------------ | ----------------------------------------------------------------------------------------------- |
| geojson                | **[GeoJSON](https://tools.ietf.org/html/rfc7946#section-3)** | input features                                                                                  |
| options<i>?</i>        | **Object**                                                   | Optional parameters _(default \{\})_                                                            |
| options.mutate<i>?</i> | **boolean**                                                  | allows GeoJSON input to be mutated (significant performance increase if true) _(default false)_ |

### Returns

<ul>
  **[GeoJSON](https://tools.ietf.org/html/rfc7946#section-3)** a feature or set of features of the same type as `input` with flipped coordinates

</ul>

### Examples

```javascript
var serbia = turf.point([20.566406, 43.421008]);

var saudiArabia = turf.flip(serbia);
```

```javascript live
function Map() {
  var serbia = turf.point([20.566406, 43.421008]);
  var saudiArabia = turf.flip(serbia);

  console.log('Original point:', serbia);
  console.log('Flipped point:', saudiArabia);

  return <ExampleMap addToMap={{ serbia, saudiArabia }} />;
}
```

### Installation

```javascript
$ npm install @turf/flip

import { flip } from "@turf/flip";
const result = flip(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.flip(...);
```
